--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,125 @@
-<!DOCTYPE html> <html lang="de"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>PDF Formular Befüllung</title> <script> function autofillAddress() { let strasse = document.getElementById("strasse").value; let plzOrt = document.getElementById("plz").value; document.getElementById("kStrasse").value = strasse; document.getElementById("kPLZOrt").value = plzOrt; document.getElementById("kLieferanschriftStr").value = strasse; document.getElementById("kLieferanschriftPLZOrt").value = plzOrt; } </script> </head> <body> <h2>PDF Formular Befüllung</h2> <form id="pdfForm"> <label for="vorname">Vorname:</label> <input type="text" id="vorname" name="vorname" required><br> <label for="nachname">Nachname:</label> <input type="text" id="nachname" name="nachname" required><br> <label for="firma">Firma:</label> <input type="text" id="firma" name="firma"><br> <label for="strasse">Straße/Nr.:</label> <input type="text" id="strasse" name="strasse" required oninput="autofillAddress()"><br> <label for="plz">PLZ/Ort:</label> <input type="text" id="plz" name="plz" required oninput="autofillAddress()"><br> <label for="kStrasse">Kundenstraße/Nr.:</label> <input type="text" id="kStrasse" name="kStrasse"><br> <label for="kPLZOrt">Kunden-PLZ/Ort:</label> <input type="text" id="kPLZOrt" name="kPLZOrt"><br> <label for="kLieferanschriftStr">Lieferanschrift Straße/Nr.:</label> <input type="text" id="kLieferanschriftStr" name="kLieferanschriftStr"><br> <label for="kLieferanschriftPLZOrt">Lieferanschrift PLZ/Ort:</label> <input type="text" id="kLieferanschriftPLZOrt" name="kLieferanschriftPLZOrt"><br> <label for="stromversorger">Stromversorger:</label> <input type="text" id="stromversorger" name="stromversorger"><br> <label for="zaehlernummer">Zählernummer:</label> <input type="text" id="zaehlernummer" name="zaehlernummer" required><br> <label for="iban">IBAN:</label> <input type="text" id="iban" name="iban" required><br> <label for="bankname">Bankname:</label> <input type="text" id="bankname" name="bankname" required><br> <label for="bic">BIC:</label> <input type="text" id="bic" name="bic"><br> <label for="telefon">Telefon:</label> <input type="text" id="telefon" name="telefon"><br> <label for="email">E-Mail:</label> <input type="email" id="email" name="email"><br> <label for="kundentyp">Kundentyp:</label> <select id="kundentyp" name="kundentyp"> <option value="privat">Privatkunde</option> <option value="geschaeft">Geschäftskunde</option> </select><br> <label for="ort">Ort:</label> <input type="text" id="ort" name="ort" required><br> <label for="datum">Datum:</label> <input type="text" id="datum" name="datum" readonly><br> <button type="submit">PDF generieren</button> </form> <script> document.addEventListener("DOMContentLoaded", function() { document.getElementById("datum").value = new Date().toLocaleDateString("de-DE"); }); document.getElementById("pdfForm").addEventListener("submit", async function(event) { event.preventDefault(); const formData = new FormData(this); const jsonData = {}; formData.forEach((value, key) => jsonData[key] = value); const response = await fetch("https://lvbstrom.onrender.com/fill-pdf", { method: "POST", headers: { "Content-Type": "application/json" }, body: JSON.stringify(jsonData) }); if (response.ok) { const blob = await response.blob(); const url = window.URL.createObjectURL(blob); const a = document.createElement("a"); a.href = url; a.download = "filled-form.pdf"; document.body.appendChild(a); a.click(); window.URL.revokeObjectURL(url); } else { alert("Fehler beim Generieren der PDF."); } }); </script> </body> </html>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PDF Formular Befüllung</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: left;
+            align-items: flex-start;
+            min-height: 100vh;
+            background-color: #f4f4f4;
+            padding: 20px;
+        }
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 650px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        td {
+            padding: 4px 8px;
+            vertical-align: middle;
+        }
+        label {
+            font-weight: bold;
+        }
+        input, select {
+            width: 100%;
+            padding: 4px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        button:hover {
+            background: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h2>PDF Formular Befüllung</h2>
+        <form id="pdfForm">
+            <table>
+                <tr>
+                    <td><label for="stromnutzung">Stromnutzung:</label></td>
+                    <td>
+                        <select id="stromnutzung" name="stromnutzung">
+                            <option value="Milchviehhaltung">Milchviehhaltung</option>
+                            <option value="Bullenmast">Bullenmast</option>
+                            <option value="Kälbermast">Kälbermast</option>
+                            <option value="Sauenhaltung">Sauenhaltung</option>
+                            <option value="Ferkelaufzucht/Systemferkelaufzucht">Ferkelaufzucht/Systemferkelaufzucht</option>
+                            <option value="Schweinemast">Schweinemast</option>
+                            <option value="Flüssigfütterung">Flüssigfütterung</option>
+                            <option value="eigene Mahl- und Mischanlage">eigene Mahl- und Mischanlage</option>
+                            <option value="Junghennenaufzucht">Junghennenaufzucht</option>
+                            <option value="Legehennenhaltung">Legehennenhaltung</option>
+                            <option value="Hähnchenmast">Hähnchenmast</option>
+                            <option value="Putenmast">Putenmast</option>
+                            <option value="Entenmast">Entenmast</option>
+                            <option value="Getreidetrocknung/Getreideaufbereitung">Getreidetrocknung/Getreideaufbereitung</option>
+                            <option value="Baumschulen/Gewächshäuser">Baumschulen/Gewächshäuser</option>
+                            <option value="Gaststätten">Gaststätten</option>
+                            <option value="Campingplätze">Campingplätze</option>
+                            <option value="Obstbau">Obstbau</option>
+                            <option value="Sonstiger Verbrauch">Sonstiger Verbrauch</option>
+                        </select>
+                    </td>
+                </tr>			
+                <tr><td><label for="kreisverband">Kreisverband:</label></td><td><input type="text" id="kreisverband" name="kreisverband" required></td></tr>
+                <tr><td><label for="kreisverbandscode">Kreisverbandscode:</label></td><td><input type="text" id="kreisverbandscode" name="kreisverbandscode" required></td></tr>
+                <tr><td><label for="mitgliedsnummer">Mitgliedsnummer:</label></td><td><input type="text" id="mitgliedsnummer" name="mitgliedsnummer" required></td></tr>
+                <tr><td><label for="vorname">Vorname:</label></td><td><input type="text" id="vorname" name="vorname" required></td></tr>
+                <tr><td><label for="nachname">Nachname:</label></td><td><input type="text" id="nachname" name="nachname" required></td></tr>
+                <tr><td><label for="strasse">Straße u. Hausnummer:</label></td><td><input type="text" id="strasse" name="strasse" required></td></tr>
+                <tr><td><label for="plz">PLZ:</label></td><td><input type="text" id="plz" name="plz" required></td></tr>
+                <tr><td><label for="ort">Ort:</label></td><td><input type="text" id="ort" name="ort" required></td></tr>
+				<tr><td>Lieferadresse (bei Abweichung anzupasssen)</td></tr>
+				<tr><td><label for="strassel">Straße u. Hausnummer:</label></td><td><input type="text" id="strasse" name="strasse" required></td></tr>
+                <tr><td><label for="plzl">PLZ:</label></td><td><input type="text" id="plz" name="plz" required></td></tr>
+                <tr><td><label for="ortl">Ort:</label></td><td><input type="text" id="ort" name="ort" required></td></tr>
+                <tr><td><label for="stromversorger">Stromversorger:</label></td><td><input type="text" id="stromversorger" name="stromversorger"></td></tr>
+                <tr><td><label for="zaehlernummer">Strom Zählernummer:</label></td><td><input type="text" id="zaehlernummer" name="zaehlernummer" required></td></tr>
+				<tr><td><label for="marktlokationen">Strom Marktlokationen:</label></td><td><input type="text" id="zaehlernummer" name="zaehlernummer" required></td></tr>
+				<tr><td><label for="Strom Vertragsnummer">Zählernummer:</label></td><td><input type="text" id="zaehlernummer" name="zaehlernummer" required></td></tr>
+                <tr><td><label for="iban">IBAN:</label></td><td><input type="text" id="iban" name="iban" required></td></tr>
+                <tr><td><label for="bankname">Bankname:</label></td><td><input type="text" id="bankname" name="bankname" required></td></tr>
+                <tr><td><label for="bic">BIC:</label></td><td><input type="text" id="bic" name="bic"></td></tr>
+                <tr><td><label for="telefon">Telefon:</label></td><td><input type="text" id="telefon" name="telefon"></td></tr>
+                <tr><td><label for="email">E-Mail (für Rechnungen):</label></td><td><input type="email" id="email" name="email"></td></tr>
+                <tr><td><label for="kundentyp">Kundentyp:</label></td>
+                    <td>
+                        <select id="kundentyp" name="kundentyp">
+                            <option value="privat">Privatkunde</option>
+                            <option value="geschaeft">Geschäftskunde</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr><td><label for="ort">Ort:</label></td><td><input type="text" id="ort" name="ort" required></td></tr>
+                <tr><td><label for="datum">Datum:</label></td><td><input type="text" id="datum" name="datum" readonly></td></tr>
+            
+
+            </table>
+            <button type="submit">PDF generieren</button>
+        </form>
+    </div>
+</body>
+</html>
