--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Formular Bef¸llung</title>
+    <title>PDF Formular Bef√ºllung</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>PDF Formular Bef¸llung</h2>
+        <h2>PDF Formular Bef√ºllung</h2>
         <form id="pdfForm">
             <table>
                 <tr>
@@ -64,21 +64,21 @@
                         <select id="stromnutzung" name="stromnutzung">
                             <option value="Milchviehhaltung">Milchviehhaltung</option>
                             <option value="Bullenmast">Bullenmast</option>
-                            <option value="K‰lbermast">K‰lbermast</option>
+                            <option value="K√§lbermast">K√§lbermast</option>
                             <option value="Sauenhaltung">Sauenhaltung</option>
                             <option value="Ferkelaufzucht/Systemferkelaufzucht">Ferkelaufzucht/Systemferkelaufzucht</option>
                             <option value="Schweinemast">Schweinemast</option>
-                            <option value="Fl¸ssigf¸tterung">Fl¸ssigf¸tterung</option>
+                            <option value="Fl√ºssigf√ºtterung">Fl√ºssigf√ºtterung</option>
                             <option value="eigene Mahl- und Mischanlage">eigene Mahl- und Mischanlage</option>
                             <option value="Junghennenaufzucht">Junghennenaufzucht</option>
                             <option value="Legehennenhaltung">Legehennenhaltung</option>
-                            <option value="H‰hnchenmast">H‰hnchenmast</option>
+                            <option value="H√§hnchenmast">H√§hnchenmast</option>
                             <option value="Putenmast">Putenmast</option>
                             <option value="Entenmast">Entenmast</option>
                             <option value="Getreidetrocknung/Getreideaufbereitung">Getreidetrocknung/Getreideaufbereitung</option>
-                            <option value="Baumschulen/Gew‰chsh‰user">Baumschulen/Gew‰chsh‰user</option>
-                            <option value="Gastst‰tten">Gastst‰tten</option>
-                            <option value="Campingpl‰tze">Campingpl‰tze</option>
+                            <option value="Baumschulen/Gew√§chsh√§user">Baumschulen/Gew√§chsh√§user</option>
+                            <option value="Gastst√§tten">Gastst√§tten</option>
+                            <option value="Campingpl√§tze">Campingpl√§tze</option>
                             <option value="Obstbau">Obstbau</option>
                             <option value="Sonstiger Verbrauch">Sonstiger Verbrauch</option>
                         </select>
@@ -89,27 +89,27 @@
                 <tr><td><label for="mitgliedsnummer">Mitgliedsnummer:</label></td><td><input type="text" id="mitgliedsnummer" name="mitgliedsnummer" required></td></tr>
                 <tr><td><label for="vorname">Vorname:</label></td><td><input type="text" id="vorname" name="vorname" required></td></tr>
                 <tr><td><label for="nachname">Nachname:</label></td><td><input type="text" id="nachname" name="nachname" required></td></tr>
-                <tr><td><label for="strasse">Straﬂe u. Hausnummer:</label></td><td><input type="text" id="strasse" name="strasse" required></td></tr>
+                <tr><td><label for="strasse">Stra√üe u. Hausnummer:</label></td><td><input type="text" id="strasse" name="strasse" required></td></tr>
                 <tr><td><label for="plz">PLZ:</label></td><td><input type="text" id="plz" name="plz" required></td></tr>
                 <tr><td><label for="ort">Ort:</label></td><td><input type="text" id="ort" name="ort" required></td></tr>
 				<tr><td>Lieferadresse (bei Abweichung anzupasssen)</td></tr>
-				<tr><td><label for="strassel">Straﬂe u. Hausnummer:</label></td><td><input type="text" id="strasse" name="strasse" required></td></tr>
+				<tr><td><label for="strassel">Stra√üe u. Hausnummer:</label></td><td><input type="text" id="strasse" name="strasse" required></td></tr>
                 <tr><td><label for="plzl">PLZ:</label></td><td><input type="text" id="plz" name="plz" required></td></tr>
                 <tr><td><label for="ortl">Ort:</label></td><td><input type="text" id="ort" name="ort" required></td></tr>
                 <tr><td><label for="stromversorger">Stromversorger:</label></td><td><input type="text" id="stromversorger" name="stromversorger"></td></tr>
-                <tr><td><label for="zaehlernummer">Strom Z‰hlernummer:</label></td><td><input type="text" id="zaehlernummer" name="zaehlernummer" required></td></tr>
+                <tr><td><label for="zaehlernummer">Strom Z√§hlernummer:</label></td><td><input type="text" id="zaehlernummer" name="zaehlernummer" required></td></tr>
 				<tr><td><label for="marktlokationen">Strom Marktlokationen:</label></td><td><input type="text" id="zaehlernummer" name="zaehlernummer" required></td></tr>
-				<tr><td><label for="Strom Vertragsnummer">Z‰hlernummer:</label></td><td><input type="text" id="zaehlernummer" name="zaehlernummer" required></td></tr>
+				<tr><td><label for="Strom Vertragsnummer">Z√§hlernummer:</label></td><td><input type="text" id="zaehlernummer" name="zaehlernummer" required></td></tr>
                 <tr><td><label for="iban">IBAN:</label></td><td><input type="text" id="iban" name="iban" required></td></tr>
                 <tr><td><label for="bankname">Bankname:</label></td><td><input type="text" id="bankname" name="bankname" required></td></tr>
                 <tr><td><label for="bic">BIC:</label></td><td><input type="text" id="bic" name="bic"></td></tr>
                 <tr><td><label for="telefon">Telefon:</label></td><td><input type="text" id="telefon" name="telefon"></td></tr>
-                <tr><td><label for="email">E-Mail (f¸r Rechnungen):</label></td><td><input type="email" id="email" name="email"></td></tr>
+                <tr><td><label for="email">E-Mail (f√ºr Rechnungen):</label></td><td><input type="email" id="email" name="email"></td></tr>
                 <tr><td><label for="kundentyp">Kundentyp:</label></td>
                     <td>
                         <select id="kundentyp" name="kundentyp">
                             <option value="privat">Privatkunde</option>
-                            <option value="geschaeft">Gesch‰ftskunde</option>
+                            <option value="geschaeft">Gesch√§ftskunde</option>
                         </select>
                     </td>
                 </tr>
@@ -121,5 +121,6 @@
             <button type="submit">PDF generieren</button>
         </form>
     </div>
+<script> document.addEventListener("DOMContentLoaded", function() { document.getElementById("datum").value = new Date().toLocaleDateString("de-DE"); }); document.getElementById("pdfForm").addEventListener("submit", async function(event) { event.preventDefault(); const formData = new FormData(this); const jsonData = {}; formData.forEach((value, key) => jsonData[key] = value); const response = await fetch("https://lvbstrom.onrender.com/fill-pdf", { method: "POST", headers: { "Content-Type": "application/json" }, body: JSON.stringify(jsonData) }); if (response.ok) { const blob = await response.blob(); const url = window.URL.createObjectURL(blob); const a = document.createElement("a"); a.href = url; a.download = "filled-form.pdf"; document.body.appendChild(a); a.click(); window.URL.revokeObjectURL(url); } else { alert("Fehler beim Generieren der PDF."); } }); </script>
 </body>
 </html>
