--- a/public/index.html
+++ b/public/index.html
@@ -89,9 +89,9 @@
                 <tr><td><label for="mitgliedsnummer">Mitgliedsnummer:</label></td><td><input type="text" id="mitgliedsnummer" name="mitgliedsnummer" required></td></tr>
                 <tr><td><label for="kvorname">Vorname:</label></td><td><input type="text" id="kvorname" name="kvorname" required></td></tr>
                 <tr><td><label for="knachname">Nachname:</label></td><td><input type="text" id="knachname" name="knachname" required></td></tr>
-                <tr><td><label for="kstr">Straße u. Hausnummer:</label></td><td><input type="text" id="kstr" name="kstr" required></td></tr>
-                <tr><td><label for="kplz">PLZ:</label></td><td><input type="text" id="kplz" name="kplz" required></td></tr>
-                <tr><td><label for="kort">Ort:</label></td><td><input type="text" id="kort" name="kort" required></td></tr>
+                <tr><td><label for="kstr">Straße u. Hausnummer:</label></td><td><input type="text" id="kstr" name="kstr" oninput="copyAddress()" required></td></tr>
+                <tr><td><label for="kplz">PLZ:</label></td><td><input type="text" id="kplz" name="kplz" oninput="copyAddress()" required></td></tr>
+                <tr><td><label for="kort">Ort:</label></td><td><input type="text" id="kort" name="kort" oninput="copyAddress()" required></td></tr>
 				<tr><td>Lieferadresse (bei Abweichung anzupasssen)</td></tr>
 				<tr><td><label for="lstr">Straße u. Hausnummer:</label></td><td><input type="text" id="lstr" name="lstr" required></td></tr>
                 <tr><td><label for="lplz">PLZ:</label></td><td><input type="text" id="lplz" name="lplz" required></td></tr>
@@ -124,6 +124,13 @@
             <button type="submit">PDF generieren</button>
         </form>
     </div>
+	<script>
+function copyAddress() {
+    document.getElementById("lstr").value = document.getElementById("kstr").value;
+    document.getElementById("lplz").value = document.getElementById("kplz").value;
+    document.getElementById("lort").value = document.getElementById("kort").value;
+}
+</script>
 	<script> document.addEventListener("DOMContentLoaded", function() { document.getElementById("datum").value = new Date().toLocaleDateString("de-DE"); }); document.getElementById("pdfForm").addEventListener("submit", async function(event) { event.preventDefault(); const formData = new FormData(this); const jsonData = {}; formData.forEach((value, key) => jsonData[key] = value); const response = await fetch("https://lvbstrom.onrender.com/fill-pdf", { method: "POST", headers: { "Content-Type": "application/json" }, body: JSON.stringify(jsonData) }); if (response.ok) { const blob = await response.blob(); const url = window.URL.createObjectURL(blob); const a = document.createElement("a"); a.href = url; a.download = "filled-form.pdf"; document.body.appendChild(a); a.click(); window.URL.revokeObjectURL(url); } else { alert("Fehler beim Generieren der PDF."); } }); </script>
 </body>
 </html>
