--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
 				<tr><td><label for="lstr">Straße u. Hausnummer:</label></td><td><input type="text" id="lstr" name="lstr" required></td></tr>
                 <tr><td><label for="lplz">PLZ:</label></td><td><input type="text" id="lplz" name="lplz" required></td></tr>
                 <tr><td><label for="lort">Ort:</label></td><td><input type="text" id="lort" name="lort" required></td></tr>
-                <tr><td>Angaqben zur Strombelieferung</td></tr>
+                <tr><td>Angaben zur Strombelieferung</td></tr>
 				<tr><td><label for="stromversorger">Stromversorger:</label></td><td><input type="text" id="stromversorger" name="stromversorger"></td></tr>
                 <tr><td><label for="zaehlernummer">Zählernummer:</label></td><td><input type="text" id="zaehlernummer" name="zaehlernummer" required></td></tr>
 				<tr><td><label for="marktl">Marktlokationen:</label></td><td><input type="text" id="marktl" name="marktl" required></td></tr>
