--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
                 <tr><td><label for="mitgliedsnummer">Mitgliedsnummer:</label></td><td><input type="text" id="mitgliedsnummer" name="mitgliedsnummer" required></td></tr>
                 <tr><td><label for="kvorname">Vorname:</label></td><td><input type="text" id="kvorname" name="kvorname" required></td></tr>
                 <tr><td><label for="knachname">Nachname:</label></td><td><input type="text" id="knachname" name="knachname" required></td></tr>
-		<tr><td><label for="geburtstag">Geburtstag:</label></td><td><input type="text" id="geburtstag" name="geburtstag"></td></tr>    
+		<tr><td><label for="geburtstag">Geburtstag:</label></td><td><input type="date" id="geburtstag" name="geburtstag"></td></tr>    
                 <tr><td><label for="kstr">Straße u. Hausnummer:</label></td><td><input type="text" id="kstr" name="kstr" oninput="copyAddress()" required></td></tr>
                 <tr><td><label for="kplz">PLZ:</label></td><td><input type="text" id="kplz" name="kplz" oninput="copyAddress()" required></td></tr>
                 <tr><td><label for="kort">Ort:</label></td><td><input type="text" id="kort" name="kort" oninput="copyAddress()" required></td></tr>
@@ -109,7 +109,7 @@
 		<tr><td><label for="bic">BIC:</label></td><td><input type="text" id="bic" name="bic"></td></tr>
                 <tr><td>Kontaktdaten</td></tr>
 		<tr><td><label for="telefon">Telefon:</label></td><td><input type="text" id="telefon" name="telefon"></td></tr>
-		<tr><td><label for="handy">Handy:</label></td><td><input type="text" id="telefon" name="telefon"></td></tr>
+		<tr><td><label for="handy">Handy:</label></td><td><input type="text" id="handy" name="handy"></td></tr>
 		<tr><td><label for="fax">Fax:</label></td><td><input type="text" id="fax" name="fax"></td></tr>
                 <tr><td><label for="email">E-Mail (für Rechnungen):</label></td><td><input type="email" id="email" name="email"></td></tr>
                 <tr><td><label for="kundentyp">Kundentyp:</label></td>
