--- a/public/index.html
+++ b/public/index.html
@@ -85,32 +85,34 @@
                     </td>
                 </tr>			
                 <tr><td><label for="kreisverband">Kreisverband:</label></td><td><input type="text" id="kreisverband" name="kreisverband" required></td></tr>
-                <tr><td><label for="kreisverbandscode">Kreisverbandscode:</label></td><td><input type="text" id="kreisverbandscode" name="kreisverbandscode" required></td></tr>
+                <tr><td><label for="kreisverbandscode">Kreisverbandscode:</label></td><td><input type="number" id="kreisverbandscode" name="kreisverbandscode" required></td></tr>
                 <tr><td><label for="mitgliedsnummer">Mitgliedsnummer:</label></td><td><input type="text" id="mitgliedsnummer" name="mitgliedsnummer" required></td></tr>
                 <tr><td><label for="kvorname">Vorname:</label></td><td><input type="text" id="kvorname" name="kvorname" required></td></tr>
                 <tr><td><label for="knachname">Nachname:</label></td><td><input type="text" id="knachname" name="knachname" required></td></tr>
-		<tr><td><label for="geburtstag">Geburtstag:</label></td><td><input type="date" id="geburtstag" name="geburtstag"></td></tr>    
+		<tr><td><label for="geburtstag">Geburtstag:</label></td><td><input type="date" id="geburtstag" name="geburtstag"></td></tr>
+                <tr><td><label for="vertreter">ggf. gesetzlicher Vertreter:</label></td><td><input type="text" id="vertreter" name="vertreter"></td></tr> 
+		<tr><td>Rechnungsanschrift</td></tr>
                 <tr><td><label for="kstr">Straße u. Hausnummer:</label></td><td><input type="text" id="kstr" name="kstr" oninput="copyAddress()" required></td></tr>
-                <tr><td><label for="kplz">PLZ:</label></td><td><input type="text" id="kplz" name="kplz" placeholder="z. B. 80331" oninput="fetchCity(); copyAddress()" required></td></tr>
+                <tr><td><label for="kplz">PLZ:</label></td><td><input type="number" id="kplz" name="kplz" placeholder="z. B. 80331" oninput="fetchCity(); copyAddress()" required></td></tr>
                 <tr><td><label for="kort">Ort:</label></td><td><input type="text" id="kort" name="kort" oninput="copyAddress()" required></td></tr>
 		<tr><td>Lieferadresse (bei Abweichung anzupasssen)</td></tr>
 		<tr><td><label for="lstr">Straße u. Hausnummer:</label></td><td><input type="text" id="lstr" name="lstr" required></td></tr>
-                <tr><td><label for="lplz">PLZ:</label></td><td><input type="text" id="lplz" name="lplz" oninput="fetchCity2()" required></td></tr>
+                <tr><td><label for="lplz">PLZ:</label></td><td><input type="number" id="lplz" name="lplz" oninput="fetchCity2()" required></td></tr>
                 <tr><td><label for="lort">Ort:</label></td><td><input type="text" id="lort" name="lort" required></td></tr>
                 <tr><td>Angaben zur Strombelieferung</td></tr>
-		<tr><td><label for="stromversorger">Stromversorger:</label></td><td><input type="text" id="stromversorger" name="stromversorger"></td></tr>
-                <tr><td><label for="zaehlernummer">Zählernummer:</label></td><td><input type="text" id="zaehlernummer" name="zaehlernummer" required></td></tr>
-		<tr><td><label for="marktl">Marktlokationen:</label></td><td><input type="text" id="marktl" name="marktl" required></td></tr>
+		<tr><td><label for="stromversorger">Stromversorger:</label></td><td><input type="text" id="stromversorger" name="stromversorger" required></td></tr>
+                <tr><td><label for="zaehlernummer">Zählernummer:</label></td><td><input type="text" id="zaehlernummer" name="zaehlernummer"></td></tr>
+		<tr><td><label for="marktl">Marktlokationen:</label></td><td><input type="number" id="marktl" name="marktl" required></td></tr>
 		<tr><td><label for="vertragsnummer">Vertragsnummer:</label></td><td><input type="text" id="vertragsnummer" name="vertragsnummer" required></td></tr>
-                <tr><td><label for="verbrauch">Verbrauch Vorjahr:</label></td><td><input type="text" id="verbrauch" name="verbrauch" required></td></tr>
+                <tr><td><label for="verbrauch">Verbrauch Vorjahr (kWh):</label></td><td><input type="number" id="verbrauch" name="verbrauch" required></td></tr>
 		<tr><td>Kontodaten</td></tr>
 		<tr><td><label for="iban">IBAN:</label></td><td><input type="text" id="iban" name="iban" placeholder="z. B. DE12345678901234567890" oninput="validateIban()" required></td></tr>
 		<tr><td><label for="bankname">Bankname:</label></td><td><input type="text" id="bankname" name="bankname" required></td></tr>
-		<tr><td><label for="bic">BIC:</label></td><td><input type="text" id="bic" name="bic"></td></tr>
+		<tr><td><label for="bic">BIC:</label></td><td><input type="text" id="bic" name="bic" required></td></tr>
                 <tr><td>Kontaktdaten</td></tr>
-		<tr><td><label for="telefon">Telefon:</label></td><td><input type="text" id="telefon" name="telefon"></td></tr>
-		<tr><td><label for="handy">Handy:</label></td><td><input type="text" id="handy" name="handy"></td></tr>
-		<tr><td><label for="fax">Fax:</label></td><td><input type="text" id="fax" name="fax"></td></tr>
+		<tr><td><label for="telefon">Telefon:</label></td><td><input type="number" id="telefon" name="telefon"></td></tr>
+		<tr><td><label for="handy">Handy:</label></td><td><input type="number" id="handy" name="handy"></td></tr>
+		<tr><td><label for="fax">Fax:</label></td><td><input type="number" id="fax" name="fax"></td></tr>
                 <tr><td><label for="email">E-Mail (für Rechnungen):</label></td><td><input type="email" id="email" name="email"></td></tr>
                 <tr><td><label for="kundentyp">Kundentyp:</label></td>
                     <td>
