--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,8 @@
                 <tr><td><label for="kreisverband">Kreisverband:</label></td><td><input type="text" id="kreisverband" name="kreisverband" required></td></tr>
                 <tr><td><label for="kreisverbandscode">Kreisverbandscode:</label></td><td><input type="number" id="kreisverbandscode" name="kreisverbandscode" required></td></tr>
                 <tr><td><label for="mitgliedsnummer">Mitgliedsnummer:</label></td><td><input type="text" id="mitgliedsnummer" name="mitgliedsnummer" required></td></tr>
-                <tr><td><label for="kvorname">Vorname:</label></td><td><input type="text" id="kvorname" name="kvorname" required></td></tr>
+                <tr><td><label for="firma">Firma:</label></td><td><input type="text" id="firma" name="firma"></td></tr>
+		<tr><td><label for="kvorname">Vorname:</label></td><td><input type="text" id="kvorname" name="kvorname" required></td></tr>
                 <tr><td><label for="knachname">Nachname:</label></td><td><input type="text" id="knachname" name="knachname" required></td></tr>
 		<tr><td><label for="geburtstag">Geburtstag:</label></td><td><input type="date" id="geburtstag" name="geburtstag"></td></tr>
                 <tr><td><label for="vertreter">ggf. gesetzlicher Vertreter:</label></td><td><input type="text" id="vertreter" name="vertreter"></td></tr> 
