--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,7 @@ function copyAddress() {
           });
       } else {
         // Falls die PLZ nicht 5 Zeichen hat, den Ortswert zurücksetzen.
-        document.getElementById("kort").value = "";
+        document.getElementById("lort").value = "";
       }
     }
   </script>
