--- a/public/index.html
+++ b/public/index.html
@@ -83,8 +83,52 @@
                             <option value="Sonstiger Verbrauch">Sonstiger Verbrauch</option>
                         </select>
                     </td>
-                </tr>			
-                <tr><td><label for="kreisverband">Kreisverband:</label></td><td><input type="text" id="kreisverband" name="kreisverband" required></td></tr>
+                </tr>
+		<tr>
+                    <td><label for="kreisverband">Kreisverband:</label></td>
+                    <td>
+                        <input list="kreisverband-liste" id="kreisverband" name="kreisverband" required>
+                        <datalist id="kreisverband-liste">
+                            <option value="Landvolk Niedersachsen">
+                            <option value="Ammerländer Landvolkverband e. V.">
+                            <option value="Kreislandvolk Friesland e. V.">
+                            <option value="Kreislandvolkverband Cloppenburg e. V.">
+                            <option value="Kreislandvolkverband Oldenburg e. V.">
+                            <option value="Kreislandvolkverband Vechta e. V.">
+                            <option value="Kreislandvolkverband Wesermarsch e. V.">
+                            <option value="Hauptverband des Osnabrücker Landvolkes (HOL) e. V.">
+                            <option value="Kreislandvolkverband Melle e. V.">
+                            <option value="Kreisverband Wittlage e. V.">
+                            <option value="Kreisverband Grafschaft Diepholz e. V.">
+                            <option value="Landvolkdienst GmbH">
+                            <option value="Kreisverband Bremervörde – Zeven e. V.">
+                            <option value="Kreisverband Osterholz e. V.">
+                            <option value="Kreisverband Rotenburg-Verden e. V.">
+                            <option value="Kreisverband Stade e. V.">
+                            <option value="Kreisverband Wesermünde e. V.">
+                            <option value="Kreisverband Bersenbrück e. V.">
+                            <option value="Kreisverband Hadeln e. V.">
+                            <option value="Kreisverband Soltau-Fallingbostel e. V.">
+                            <option value="Kreisverband Celle e. V.">
+                            <option value="Kreisverband Lüneburger Heide e. V.">
+                            <option value="Kreisverband Uelzen e. V.">
+                            <option value="Kreisverband Mittelweser e. V.">
+                            <option value="Kreisverband Hildesheim-Marienburg e. V.">
+                            <option value="Kreisverband Lüchow-Dannenberg e. V.">
+                            <option value="Kreisverband Gifhorn e. V.">
+                            <option value="Kreisverband Lüneburg e. V.">
+                            <option value="Landvolkkreisverband Hannover e. V.">
+                            <option value="Kreisverband Northeim-Osterode KBV e. V.">
+                            <option value="Kreisverband Alfeld (Leine) e. V.">
+                            <option value="Kreisverband Northeim e. V.">
+                            <option value="Kreisverband Göttingen e. V.">
+                            <option value="Landwirtschaftlicher Hauptverein Weserbergland e. V.">
+                            <option value="Vereinigung des emsländischen Landvolkes e. V.">
+                            <option value="Ostfriesisches Landvolk e. V.">
+                            <option value="Bezirksverband Braunschweig e. V.">
+                        </datalist>
+                    </td>
+                </tr>
                 <tr><td><label for="kreisverbandscode">Kreisverbandscode:</label></td><td><input type="number" id="kreisverbandscode" name="kreisverbandscode" required></td></tr>
                 <tr><td><label for="mitgliedsnummer">Mitgliedsnummer:</label></td><td><input type="text" id="mitgliedsnummer" name="mitgliedsnummer" required></td></tr>
                 <tr><td><label for="firma">Firma:</label></td><td><input type="text" id="firma" name="firma"></td></tr>
