--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,35 @@
             <button type="submit">PDF generieren</button>
         </form>
     </div>
+	
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    // Überprüfen, ob die Geolocation-API verfügbar ist
+    if ("geolocation" in navigator) {
+        navigator.geolocation.getCurrentPosition(function(position) {
+            var latitude = position.coords.latitude;
+            var longitude = position.coords.longitude;
 
+            // Umkehrgeokodierung mit Nominatim
+            var xhr = new XMLHttpRequest();
+            var url = `https://nominatim.openstreetmap.org/reverse?format=jsonv2&lat=${latitude}&lon=${longitude}`;
+            xhr.open("GET", url, true);
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState === 4 && xhr.status === 200) {
+                    var response = JSON.parse(xhr.responseText);
+                    var address = response.display_name;
+                    document.getElementById("ort").value = address;
+                }
+            };
+            xhr.send();
+        }, function(error) {
+            console.error("Fehler bei der Standortermittlung: ", error);
+        });
+    } else {
+        console.error("Geolocation wird von diesem Browser nicht unterstützt.");
+    }
+});
+</script>
 <script>
     document.addEventListener("DOMContentLoaded", async function() {
         const response = await fetch("/api/stromanbieter");
